--- a/01_Presentacion/Views/Pedido/AgregarCliente.cshtml
+++ b/01_Presentacion/Views/Pedido/AgregarCliente.cshtml
@@ -23,7 +23,7 @@
 </div>
 
 <p>
-    @Html.ActionLink("Cancelar", "NuevoPedido")
+    <a href="@Url.Action("NuevoPedido","Pedido")" class="btn btn-warning">Regresar</a>
 </p>
 
 @section scripts{
