--- a/01_Presentacion/Views/Pedido/AgregarMenu.cshtml
+++ b/01_Presentacion/Views/Pedido/AgregarMenu.cshtml
@@ -57,5 +57,5 @@
 }
 
 <div>
-    @Html.ActionLink("Regresar", "MainPedido")
+    <a href="@Url.Action("NuevoPedido","Pedido")" class="btn btn-warning">Regresar</a>
 </div>
