--- a/01_Presentacion/Views/Pedido/DetalleMain.cshtml
+++ b/01_Presentacion/Views/Pedido/DetalleMain.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.PedidoID)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Cliente.Persona.Nombre)
+            @Html.DisplayFor(modelItem => item.Cliente.Persona.Nombre) @Html.DisplayFor(modelItem => item.Cliente.Persona.Apellidos)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Cliente.Persona.Direccion)
@@ -48,7 +48,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Detalles", "MenuPedido", new { pedidoID =item.PedidoID }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
