--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -49,9 +49,7 @@
                                 <li>
                                     <a><i class="fa fa-home"></i> Pedido <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li>@Html.ActionLink("Registrar Pedido", "Main", "Pedido")</li>
-                                        <li><a href="index2.html">Dashboard2</a></li>
-                                        <li><a href="index3.html">Dashboard3</a></li>
+                                        <li>@Html.ActionLink("Delivery Llamada", "Main", "Pedido")</li>
                                     </ul>
                                 </li>
                                 <li>
