--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -19,24 +19,12 @@
     <!-- ace styles -->
     <link rel="stylesheet" href="~/Bootstrap/Intranet/css/ace.min.css" class="ace-main-stylesheet" id="main-ace-style" />
 
-    <!--[if lte IE 9]>
-        <link rel="stylesheet" href="assets/css/ace-part2.min.css" class="ace-main-stylesheet" />
-    <![endif]-->
     <link rel="stylesheet" href="~/Bootstrap/Intranet/css/ace-skins.min.css" />
     <link rel="stylesheet" href="~/Bootstrap/Intranet/css/ace-rtl.min.css" />
 
-    <!--[if lte IE 9]>
-      <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
-    <![endif]-->
     <!-- inline styles related to this page -->
     <!-- ace settings handler -->
     <script src="~/Bootstrap/Intranet/js/ace-extra.min.js"></script>
-
-    <!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
-    <!--[if lte IE 8]>
-    <script src="assets/js/html5shiv.min.js"></script>
-    <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body class="no-skin">
@@ -53,7 +41,7 @@
             </button>
 
             <div class="navbar-header pull-left">
-                <a href="index.html" class="navbar-brand">
+                <a href="@Url.Action("Main", "Intranet")" class="navbar-brand">
                     <small>
                         <i class="fa fa-leaf"></i>
                         La Valentina
