--- a/01_Presentacion/Views/PedidoLlamada/Main.cshtml
+++ b/01_Presentacion/Views/PedidoLlamada/Main.cshtml
@@ -7,38 +7,42 @@
 <h2>Pedido por llamadas</h2>
 
 <div class="form-group">
-        <div class="row">
-            <div class="col-lg-3">
-                <select class="form-control" id="estado">
-                    <option value="">-- Todos --</option>
-                    <option value="Registrado">Registrado</option>
-                    <option value="Reparto">En Reparto</option>
-                    <option value="Finalizado">Finalizado</option>
-                </select>
-            </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <select class="form-control" id="estado">
+                <option value="">-- Todos --</option>
+                <option value="Registrado">Registrado</option>
+                <option value="Reparto">En Reparto</option>
+                <option value="Finalizado">Finalizado</option>
+            </select>
         </div>
     </div>
+</div>
 
-    <div id="detalle">
+<p>
+    <a href="@Url.Action("InicializarPedido","PedidoLlamada")" class="btn btn-primary">Nuevo Pedido</a>
+</p>
 
-    </div>
+<div id="detalle">
+
+</div>
 
 
-    @section scripts{
-        <script type="text/javascript">
-            $(document).ready(function () {
-                muestra();
-            });
+@section scripts{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            muestra();
+        });
 
-            $('#estado').change(function () {
-               muestra();
-            });
+        $('#estado').change(function () {
+            muestra();
+        });
 
-            var muestra = function () {
-                $('#detalle').load('@Url.Action("DetalleMain")', { estado: $('#estado').val() })
-            }
-        </script>
-    }
+        var muestra = function () {
+            $('#detalle').load('@Url.Action("DetalleMain")', { estado: $('#estado').val() })
+        }
+    </script>
+}
 
 
 
