--- a/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
+++ b/01_Presentacion/Views/MasterPages/MasterIntranet.cshtml
@@ -226,7 +226,34 @@
                 </li>
 
                 <li class="">
-                    <a href="widgets.html">
+                    <a href="#" class="dropdown-toggle">
+                        <i class="menu-icon fa fa-desktop"></i>
+                        <span class="menu-text">
+                            Pago
+                        </span>
+
+                        <b class="arrow fa fa-angle-down"></b>
+                    </a>
+
+                    <b class="arrow"></b>
+
+                    <ul class="submenu">
+
+                        <li class="">
+                            <a href="@Url.Action("Main", "Pago")">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Pagar
+                            </a>
+
+                            <b class="arrow"></b>
+                        </li>
+
+                    </ul>
+
+                </li>
+
+                <li class="">
+                    <a href="#">
                         <i class="menu-icon fa fa-list-alt"></i>
                         <span class="menu-text"> Widgets </span>
                     </a>
