--- a/01_Presentacion/Views/PedidoLlamada/DetalleMain.cshtml
+++ b/01_Presentacion/Views/PedidoLlamada/DetalleMain.cshtml
@@ -47,7 +47,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Detalles", "MenuPedido", new { pedidoID = item.PedidoID }) |
+                @Html.ActionLink("Detalles", "DetallePedido", new { pedidoID = item.PedidoID }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
