--- a/01_Presentacion/Views/PedidoLlamada/Main.cshtml
+++ b/01_Presentacion/Views/PedidoLlamada/Main.cshtml
@@ -20,7 +20,7 @@
 </div>
 
 <p>
-    <a href="@Url.Action("InicializarPedido","PedidoLlamada")" class="btn btn-primary">Nuevo Pedido</a>
+    <a href="@Url.Action("NuevoPedido","PedidoLlamada")" class="btn btn-primary">Nuevo Pedido</a>
 </p>
 
 <div id="detalle">
