--- a/01_Presentacion/Views/Pago/Main.cshtml
+++ b/01_Presentacion/Views/Pago/Main.cshtml
@@ -6,3 +6,47 @@
 
 <h2>Pago</h2>
 
+<div class="form-group">
+    <div class="row">
+        <div class="col-lg-3">
+            <select class="form-control" id="tipoPedido">
+                <option value="">--Todos--</option>
+                <option value="Presencial">Presencial</option>
+                <option value="Llamada">Llamada</option>
+                <option value="Online">Online</option>
+            </select>
+        </div>
+    </div>
+</div>
+<div class="form-group">
+    <div class="row">
+        <div class="col-md-3">
+            <input type="text" id="Nombre" class="form-control" placeholder="Buscar cliente">
+        </div>
+    </div>
+</div>
+<br />
+
+<div id="detalle">
+
+</div>
+
+@section scripts{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            muestra();
+        });
+
+        $('#Nombre').keyup(function () {
+            muestra();
+        });
+
+        $('#tipoPedido').change(function () {
+            muestra();
+        });
+
+        var muestra = function () {
+            $('#detalle').load('@Url.Action("DetalleMain")', { tipoPedido: $('#tipoPedido').val(), nombre: $('#Nombre').val() })
+        }
+    </script>
+}
