--- a/01_Presentacion/Views/PedidoLlamada/Main.cshtml
+++ b/01_Presentacion/Views/PedidoLlamada/Main.cshtml
@@ -10,14 +10,21 @@
     <div class="row">
         <div class="col-lg-3">
             <select class="form-control" id="estado">
-                <option value="">-- Todos --</option>
                 <option value="Registrado">Registrado</option>
-                <option value="Reparto">En Reparto</option>
-                <option value="Finalizado">Finalizado</option>
+                <option value="Reparto">Anulado</option>
+                @*<option value="Finalizado">Pagado</option>*@
             </select>
         </div>
     </div>
 </div>
+<div class="form-group">
+    <div class="row">
+        <div class="col-md-3">
+            <input type="text" id="Nombre" class="form-control" placeholder="Buscar cliente">
+        </div>
+    </div>
+</div>
+<br />
 
 <p>
     <a href="@Url.Action("NuevoPedido","PedidoLlamada")" class="btn btn-primary">Nuevo Pedido</a>
@@ -34,12 +41,16 @@
             muestra();
         });
 
+        $('#Nombre').keyup(function () {
+            muestra();
+        });
+
         $('#estado').change(function () {
             muestra();
         });
 
         var muestra = function () {
-            $('#detalle').load('@Url.Action("DetalleMain")', { estado: $('#estado').val() })
+            $('#detalle').load('@Url.Action("DetalleMain")', { estado: $('#estado').val(), nombre: $('#Nombre').val() })
         }
     </script>
 }
