--- a/01_Presentacion/Views/PedidoLlamada/Main.cshtml
+++ b/01_Presentacion/Views/PedidoLlamada/Main.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/MasterPages/MasterIntranet.cshtml";
 }
 
-<h2>Pedido por llamadas</h2>
+<h2>Pedido llamada</h2>
 
 <div class="form-group">
     <div class="row">
@@ -54,7 +54,3 @@
         }
     </script>
 }
-
-
-
-
