--- a/01_Presentacion/Views/Pago/PagoEfectivo.cshtml
+++ b/01_Presentacion/Views/Pago/PagoEfectivo.cshtml
@@ -1,29 +1,16 @@
 ﻿@model _03_Dominio.entPedido
 
 @{
-    ViewBag.Title = "PagoPaypal";
+    ViewBag.Title = "Pago Efectivo";
     Layout = "~/Views/MasterPages/MasterIntranet.cshtml";
 }
 
-<h2>PagoPaypal</h2>
-
-<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="FER39KURGHYYS">
-    <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-    <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+<h2>Pago Efectivo</h2>
 
 <div>
+    <h4>Pedido @string.Concat("000", @Html.DisplayFor(model => model.PedidoID))</h4>
+    <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PedidoID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PedidoID)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.TipoPedido)
         </dt>
