--- a/01_Presentacion/Views/Pago/PagoTarjeta.cshtml
+++ b/01_Presentacion/Views/Pago/PagoTarjeta.cshtml
@@ -1,20 +1,15 @@
 ﻿@model _03_Dominio.entPedido
 
 @{
-    ViewBag.Title = "PagoPaypal";
+    ViewBag.Title = "Pago Tarjeta";
     Layout = "~/Views/MasterPages/MasterIntranet.cshtml";
 }
 
-<h2>PagoPaypal</h2>
-
-<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="FER39KURGHYYS">
-    <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-    <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+<h2>Pago Tarjeta</h2>
 
 <div>
+    <h4>entPedido</h4>
+    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.PedidoID)
