--- a/01_Presentacion/Views/PedidoLlamada/ClientePedido.cshtml
+++ b/01_Presentacion/Views/PedidoLlamada/ClientePedido.cshtml
@@ -5,14 +5,14 @@
     {
         entPedido p = (entPedido)Session["pedido"];
         <div class="row">
+            <div class="col-md-2 pull-right">
+                <input type="button" value="Cambiar Cliente" class="btn btn-primary btn-block" data-toggle="modal" data-target="#agregarCliente" />
+            </div>
             <div class="col-md-1">
                 Cliente:
             </div>
             <div class="col-md-3">
                 <input type="text" class="form-control" disabled="disabled" placeholder="@Html.DisplayFor(model => p.Cliente.Persona.Nombre) @Html.DisplayFor(model => p.Cliente.Persona.Apellidos)">
-            </div>
-            <div class="col-md-2">
-                <input type="button" value="Cambiar Cliente" class="btn btn-primary btn-block" data-toggle="modal" data-target="#agregarCliente" />
             </div>
         </div>
         
@@ -28,14 +28,14 @@
     else
     {
         <div class="row">
+            <div class="col-md-2 pull-right">
+                <input type="button" value="Agregar Cliente" class="btn btn-primary btn-block" data-toggle="modal" data-target="#agregarCliente" />
+            </div>
             <div class="col-md-1">
                 Cliente:
             </div>
             <div class="col-md-3">
                 <input type="text" class="form-control" disabled="disabled" placeholder="Ningún cliente seleccionado">
-            </div>
-            <div class="col-md-2">
-                <input type="button" value="Agregar Cliente" class="btn btn-primary btn-block" data-toggle="modal" data-target="#agregarCliente" />
             </div>
         </div>
         <div class="row">
